# Characterisation-of-Low-Energy-Compton-Scattering

./: Citation.bib  README.md
Analysis/: Activity Analysis.py  Calibration Analysis.py  Compton Analysis.py  Crossection Analysis.py  Geometry.ggb  Root Analysis.py
Data/: Mes0_Cs137.csv  Mes1_Am241.csv  Mes1_Ba133.csv  Mes1_Bg.csv  Mes1_Cd109.csv  Mes1_Co57.csv  Mes1_Co60.csv  Mes1_Cs137.csv  Mes1_Mn54.csv  Mes1_Na22.csv  Mes2_Bg_Front.csv  Mes2_Bg_Housing.csv  Mes2_Bg_NoShield.csv  Mes2_Bg_Rear.csv  Mes3_Am241.csv  Mes3_Ba133.csv  Mes3_Bg.csv  Mes3_Cd109.csv  Mes3_Co57.csv  Mes3_Co60.csv  Mes3_Cs137.csv  Mes3_Mn54.csv  Mes3_Na22.csv  Mes3_Na22_old.csv  Mes4_Am241_030_ntg.csv  Mes4_Am241_030_tg.csv  Mes4_Am241_060_ntg.csv  Mes4_Am241_060_tg.csv  Mes4_Na22_000_ntg.csv  Mes4_Na22_000_tg.csv  Mes5_Cs137_000_ntg.csv  Mes5_Cs137_000_tg.csv  Mes5_Cs137_010_ntg.csv  Mes5_Cs137_010_tg.csv  Mes5_Cs137_020_ntg.csv  Mes5_Cs137_020_tg.csv  Mes5_Cs137_030_ntg.csv  Mes5_Cs137_030_tg.csv  Mes5_Cs137_040_ntg.csv  Mes5_Cs137_040_tg.csv  (+24 more)
Load/: Sim5_000.csv  Sim5_010.csv  Sim5_020.csv  Sim5_030.csv  Sim5_040.csv  Sim5_050.csv  Sim5_060.csv  Sim5_070.csv  Sim5_080.csv  Sim5_090.csv  Sim5_100.csv  Sim5_110.csv  Sim5_120.csv  Sim5_130.csv  Sim5_140.csv  activity.csv  calibration.csv  geometry.csv  reference.csv
Simulation/output/: Sim5_010.root  Sim5_020.root  Sim5_030.root  (+11 more)
Simulation/source/: CMakeLists.txt  action.cc  action.hh  construction.cc  construction.hh  detector.cc  detector.hh  generator.cc  generator.hh  physics.cc  physics.hh  run.cc  run.hh  scat.cc  scat.mac
